fix(ex04): update to my username

--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -93,7 +93,7 @@
     </div>
     <hr />
     <div class="footer">
-      <a href="https://pungrumpy.com">PunGrumpy</a> © wil 2024
+      <a href="https://pungrumpy.com">nokaewsa</a> © wil 2024
     </div>
   </body>
 </html>
