--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -21,6 +21,7 @@
         background-color: #f00;
       }
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   </head>
   <body>
     <div
@@ -30,36 +31,34 @@
     ></div>
   </body>
   <script>
-    let i = 0;
-
-    const increaseBalloonAnimated = (el) => {
-      if (el.offsetWidth < 420) {
-        el.style.width = `${el.offsetWidth + 10}px`;
-        el.style.height = `${el.offsetHeight + 10}px`;
-      } else {
-        el.style.width = "200px";
-        el.style.height = "200px";
-      }
-
-      changeColor(el);
-    };
-
-    const decreaseBalloonAnimated = (el) => {
-      if (el.offsetWidth > 200) {
-        el.style.width = `${el.offsetWidth - 5}px`;
-        el.style.height = `${el.offsetHeight - 5}px`;
-      } else {
-        el.style.width = "200px";
-        el.style.height = "200px";
-      }
-
-      changeColor(el);
-    };
-
-    const changeColor = (el) => {
-      el.style.backgroundColor =
-        i === 0 ? "#00ff00" : i === 1 ? "#00f" : "#f00";
-      i = (i + 1) % 3;
-    };
+    $(document).ready(() => {
+      let i = 0;
+      $(".balloon").click(function () {
+        if ($(this).width() < 420) {
+          $(this).width($(this).width() + 10);
+          $(this).height($(this).height() + 10);
+        } else {
+          $(this).width(200);
+          $(this).height(200);
+        }
+        $(this).css("background-color", () => {
+          return i === 0 ? "#00ff00" : i === 1 ? "#00f" : "#f00";
+        });
+        i = (i + 1) % 3;
+      });
+      $(".balloon").mouseleave(function () {
+        if ($(this).width() > 200) {
+          $(this).width($(this).width() - 5);
+          $(this).height($(this).height() - 5);
+        } else {
+          $(this).width(200);
+          $(this).height(200);
+        }
+        $(this).css("background-color", () => {
+          return i === 0 ? "#00ff00" : i === 1 ? "#00f" : "#f00";
+        });
+        i = (i + 1) % 3;
+      });
+    });
   </script>
 </html>
