--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -7,6 +7,7 @@
     <style>
       * {
         box-sizing: border-box;
+        background-color: #f8f9fa;
       }
       body {
         font-family: Arial, sans-serif;
@@ -31,6 +32,7 @@
         display: none;
         background: #fff;
         padding: 20px;
+        border: rgba(0, 0, 0, 0.2) 1px solid;
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         position: fixed;
