refactor(ex03bis): change text

--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <h1 class="title">ToDo List</h1>
       <div align="center">
-        <button class="add-todo__button">Add ToDo</button>
+        <button class="add-todo__button">New</button>
       </div>
       <div class="list">
         <ul id="todo-list"></ul>
