refactor(ex01bis): remove unused func

--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -24,11 +24,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   </head>
   <body>
-    <div
-      class="balloon"
-      onclick="increaseBalloonAnimated(this)"
-      onmouseleave="decreaseBalloonAnimated(this)"
-    ></div>
+    <div class="balloon"></div>
   </body>
   <script>
     $(document).ready(() => {
