fix(ex02bis): add `alert` for result

--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -74,6 +74,7 @@
           }
           $("#result").html(`Result: ${res}`);
           console.log("Result:", res);
+          alert(`Result: ${res}`);
         });
 
         setInterval(() => {
